--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
+	implementation 'com.google.code.gson:gson:2.9.0' /* Google Json Open Library */
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
