--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 	implementation 'org.seleniumhq.selenium:selenium-java:4.2.1'
 	implementation 'com.google.code.gson:gson:2.9.0' /* Google Json Open Library */
 	implementation 'org.jsoup:jsoup:1.14.3'
-	implementation 'org.springfreamework.boot:spring-boot-devtools'
+	//implementation 'org.springfreamework.boot:spring-boot-devtools'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
